fix service grid gap

--- a/src/Styles/services.scss
+++ b/src/Styles/services.scss
@@ -45,6 +45,7 @@
 
       @media screen and (max-width: $small-screen) {
         grid-template-columns: repeat(2, 1fr);
+        gap: 3rem;
       }
       .service-card {
         svg {
